completed all the problems. just need to fix minor bugs

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a>Click <span>Here1</span></a>
       <a>Click Here</a>
       <div>
-        <select name="colors">
+        <select id="colors" onchange="getColored()">
           <option value="green">Green</option>
           <option value="blue">Blue</option>
           <option value="red" selected="selected">Red</option>
@@ -29,35 +29,35 @@
         </select>
       </div>
     </div>
-    <p id="helloWorld">Hello, World!</p>
+    <p id="helloWorld" onclick="randomizeColor()">Hello, World!</p>
     <div>
-      <table>
+      <table id="mytab1">
         <tr>
           <th>Name</th>
           <th>Department</th>
         </tr>
         <tr>
-          <td class="empName">John</td>
+          <td class="empName" onmouseover="getInvisible(1)" onmouseout="getInvisible(1)">John</td>
           <td>Sales</td>
         </tr>
         <tr>
-          <td class="empName">Amy</td>
+          <td class="empName" onmouseover="getInvisible(2)" onmouseout="getInvisible(2)">Amy</td>
           <td>Finance</td>
         </tr>
         <tr>
-          <td class="empName">Austin</td>
+          <td class="empName" onmouseover="getInvisible(3)" onmouseout="getInvisible(3)">Austin</td>
           <td>Sales</td>
         </tr>
         <tr>
-          <td class="empName">Katie</td>
+          <td class="empName" onmouseover="getInvisible(4)" onmouseout="getInvisible(4)">Katie</td>
           <td>Marketing</td>
         </tr>
         <tr>
-          <td class="empName" data-customAttr="court">Courtney</td>
+          <td class="empName" onmouseover="getInvisible(5)" onmouseout="getInvisible(5)">Courtney</td>
           <td>Sales</td>
         </tr>
         <tr>
-          <td class="empName">Scout</td>
+          <td class="empName" onmouseover="getInvisible(6)" onmouseout="getInvisible(6)">Scout</td>
           <td>Sales</td>
         </tr>
       </table>
@@ -68,8 +68,8 @@
       <input type="text" data-customAttr="24" /><br/>
       <input type="radio" name="favoriteAnimal" value="dog" />Dog<br/>
       <input type="radio" name="favoriteColor" value="blue" />Blue<br/>
-      <input id="num1" class="nums" type="text" /><br/>
-      <input type="radio" name="favoriteAnimal" value="cat" />Cat<br/>
+      <input id="num1" class="nums" type="text" onchange="getNum1()" /><br/>
+      <input type="radio" name="favoriteAnimal" value="cats" />Cat<br/>
       <input type="radio" name="favoriteColor" value="red" />Red<br/>
       <input type="radio" name="favoriteAnimal" value="horse" />Horse<br/>
       <input type="radio" name="favoriteAnimal" value="dolphin" />Dolphin<br/>
@@ -84,8 +84,8 @@
         <option value="hiking">Hiking</option>
         <option value="programming" selected="selected">Programming</option>
       </select>
-      <input id="num2" class="nums" type="text" />
-      <select name="skills">
+      <input id="num2" class="nums" type="text" onchange="getNum2()" />
+      <select id="skills" onchange="getSkills()">
         <option value="java">Java</option>
         <option value="net">.NET</option>
         <option value="dom" selected="selected">DOM</option>
@@ -146,8 +146,7 @@
     // Find all checked options in the 'skills' select element.
     // Print the value and the contents.
     function getHobbies() {
-      // let skills = document.getElementsByName("skills")
-      // skills = document.querySelectorAll("option");
+
       skills = document.querySelectorAll("option:checked");
       console.log(skills)
       for (let i = 0; i < skills.length; i++) {
@@ -165,66 +164,134 @@
     function getCustomAttribute() {
 
       all = document.getElementsByTagName("*")
-      
-      for(let i = 0; i < all.attributes.length; i++){
-        console.log(all.attributes[i])
+
+      for (let i = 0; i < all.length; i++) {
+        let individual = all[i]
+        if (individual.attributes.length != 0) {
+          console.log(individual.attributes[1])
+        }
       }
-      
-      // let dataAttributes = querySelectorAll("data-customAttr")
-      // console.log(dataAttributes)
+    }
+    // getCustomAttribute()
+    // 6. Sum Event
+    // NOTE: Write unobtrusive Javascript
+    // Regarding these elements:
+    // 	<input id="num1" class="nums" type="text"/>
+    // 	<input id="num2" class="nums" type="text"/>
+    // 	<h3>Sum: <span id="sum"></span></h3>
+
+    // Define onchange event handler.
+    // Add <input> element values.
+    // Put the sum in the <span> element.
+    // If values cannot be added, put "Cannot add" in the <span> element
+
+    function addTwoNums(num1, num2) {
+      return parseFloat(num1) + parseFloat(num2)
     }
 
-    getCustomAttribute()
-// 6. Sum Event
-// NOTE: Write unobtrusive Javascript
-// Regarding these elements:
-// 	<input id="num1" class="nums" type="text"/>
-// 	<input id="num2" class="nums" type="text"/>
-// 	<h3>Sum: <span id="sum"></span></h3>
+    function setSum(sum) {
+      currentSum = document.getElementById("sum")
+      currentSum.innerText = sum
+    }
 
-// Define onchange event handler.
-// Add <input> element values.
-// Put the sum in the <span> element.
-// If values cannot be added, put "Cannot add" in the <span> element
+    function getNum1() {
+      let num1 = 0
+      let num2 = 0
+      num1 = document.getElementById("num1").value
+      num2 = document.getElementById("num2").value
+      setSum(addTwoNums(num1, num2))
+    }
 
-// 7. Skills Event
-// NOTE: Write unobtrusive Javascript
-// When user selects a skill, create an alert with a message similar to:
-// 	"Are you sure CSS is one of your skills?"
-// NOTE: no alert should appear when user deselects a skill.
+    function getNum2() {
+      let num1 = 0
+      let num2 = 0
+      num1 = document.getElementById("num1").value
+      num2 = document.getElementById("num2").value
+      setSum(addTwoNums(num1, num2))
+    }
 
-// 8. Favorite Color Event
-// NOTE: Write unobtrusive Javascript
-// NOTE: This is regarding the favoriteColor radio buttons.
-// When a user selects a color, create an alert with a message similar to:
-// 	"So you like green more than blue now?"
-// In this example, green is the new value and blue is the old value.
-// Make the background color (of all favoriteColor radio buttons) the newly selected favoriteColor
+    // 7. Skills Event
+    // NOTE: Write unobtrusive Javascript
+    // When user selects a skill, create an alert with a message similar to:
+    // 	"Are you sure CSS is one of your skills?"
+    // NOTE: no alert should appear when user deselects a skill.
 
-// 9. Show/Hide Event
-// NOTE: Write unobtrusive Javascript
-// When user hovers over an employees name:
-// 	Hide the name if shown.
-// 	Show the name if hidden.
+    function getSkills() {
+      let skilled = document.getElementById("skills").selectedIndex
+      let allSkills = document.getElementById("skills")
+      alert(`Are you sure ${allSkills[skilled].value} is one of your skills?`);
+    }
 
-// 10. Current Time
-// Regarding this element:
-// 	<h5 id="currentTime"></h5>
-// Show the current time in this element in this format: 9:05:23 AM
-// The time should be accurate to the second without having to reload the page.
+    // 8. Favorite Color Event
+    // NOTE: Write unobtrusive Javascript
+    // NOTE: This is regarding the favoriteColor radio buttons.
+    // When a user selects a color, create an alert with a message similar to:
+    // 	"So you like green more than blue now?"
+    // In this example, green is the new value and blue is the old value.
+    // Make the background color (of all favoriteColor radio buttons) the newly selected favoriteColor
 
-// 11. Delay
-// Regarding this element:
-// 	<p id="helloWorld">Hello, World!</p>
-// Three seconds after a user clicks on this element, change the text to a random color.
+    let currentColor = ""
+    let oldColor = "nothing"
+    function getColored() {
+      let colored = document.getElementById("colors").selectedIndex
+      let allColors = document.getElementById("colors")
+      currentColor = allColors[colored].value
+      alert(`So you like ${currentColor} more than ${oldColor} now?`);
+      oldColor = currentColor
+    }
 
-// 12. Walk the DOM
-// Define function walkTheDOM(node, func)
-// This function should traverse every node in the DOM. Use recursion.
-// On each node, call func(node).
+    // 9. Show/Hide Event
+    // NOTE: Write unobtrusive Javascript
+    // When user hovers over an employees name:
+    // 	Hide the name if shown.
+    // 	Show the name if hidden.
+    function getInvisible(row) {
+      table = document.getElementById("mytab1").rows;
+      if (table[row].style.display === "none") {
 
+        table[row].style.display = "block";
+      } else {
 
+        table[row].style.display = "none";
 
+      }
+
+    }
+    // 10. Current Time
+    // Regarding this element:
+    // 	<h5 id="currentTime"></h5>
+    // Show the current time in this element in this format: 9:05:23 AM
+    // The time should be accurate to the second without having to reload the page.
+    let myTime = setInterval(getTimer, 1000);
+    function getTimer() {
+      var time = new Date();
+      document.getElementById("currentTime").innerHTML = time.toLocaleTimeString();
+    }
+    // 11. Delay
+    // Regarding this element:
+    // 	<p id="helloWorld">Hello, World!</p>
+    // Three seconds after a user clicks on this element, change the text to a random color.
+
+    function randomizeColor() {
+      let worldElement = document.getElementById("helloWorld")
+      setTimeout('', 3000);
+      let randomColor = "#000000".replace(/0/g, function () { return (~~(Math.random() * 16)).toString(16); });
+      worldElement.style.color = randomColor
+    }
+
+    // 12. Walk the DOM
+    // Define function walkTheDOM(node, func)
+    // This function should traverse every node in the DOM. Use recursion.
+    // On each node, call func(node).
+
+    function walkTheDom(node, func) {
+      func(node)
+      node = node.firstChild
+      while (node) {
+        walkTheDom(node, func)
+        node = node.nextSibling
+      }
+    }
   </script>
 
 </body>
